Fix gaps

--- a/src/settings-page/editor.scss
+++ b/src/settings-page/editor.scss
@@ -13,14 +13,11 @@
 
 		display: flex;
 		align-items: center;
-
-		.branding,
-		.tabs {
-		}
+		gap: 20px;
 
 		.branding {
 			margin: 20px;
-			margin-right: 50px;
+			margin-right: 30px;
 		}
 
 		.tabs {
